--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "webpack-intro",
+  "name": "test-repo-2",
   "version": "1.0.0",
-  "description": "",
+  "description": "Test repo",
   "main": "src/javascripts/main.js",
   "scripts": {
     "start": "webpack-dev-server --mode development --open",
     "build": "webpack --mode production --module-bind js=babel-loader"
   },
   "keywords": [],
-  "author": "",
+  "author": "Liz Barnes",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "7.11.4",
